tests/baselines/reference/unionTypePropertyAccessibility.errors.txt
unionTypePropertyAccessibility.ts(33,1): error TS2454: Variable 'v1' is used before being assigned.
unionTypePropertyAccessibility.ts(34,1): error TS2454: Variable 'v2' is used before being assigned.
unionTypePropertyAccessibility.ts(35,1): error TS2454: Variable 'v3' is used before being assigned.
unionTypePropertyAccessibility.ts(35,4): error TS2445: Property 'member' is protected and only accessible within class 'Protected' and its subclasses.
unionTypePropertyAccessibility.ts(36,1): error TS2454: Variable 'v4' is used before being assigned.
unionTypePropertyAccessibility.ts(36,4): error TS2341: Property 'member' is private and only accessible within class 'Private'.
unionTypePropertyAccessibility.ts(37,1): error TS2454: Variable 'v5' is used before being assigned.
unionTypePropertyAccessibility.ts(38,1): error TS2454: Variable 'v6' is used before being assigned.
unionTypePropertyAccessibility.ts(38,4): error TS2339: Property 'member' does not exist on type 'Default | Protected'.
unionTypePropertyAccessibility.ts(39,1): error TS2454: Variable 'v7' is used before being assigned.
unionTypePropertyAccessibility.ts(39,4): error TS2339: Property 'member' does not exist on type 'Default | Private'.
unionTypePropertyAccessibility.ts(40,1): error TS2454: Variable 'v8' is used before being assigned.
unionTypePropertyAccessibility.ts(40,4): error TS2339: Property 'member' does not exist on type 'Public | Protected'.
unionTypePropertyAccessibility.ts(41,1): error TS2454: Variable 'v9' is used before being assigned.
unionTypePropertyAccessibility.ts(41,4): error TS2339: Property 'member' does not exist on type 'Public | Private'.
unionTypePropertyAccessibility.ts(42,1): error TS2454: Variable 'v10' is used before being assigned.
unionTypePropertyAccessibility.ts(42,5): error TS2339: Property 'member' does not exist on type 'Protected | Private'.
unionTypePropertyAccessibility.ts(43,1): error TS2454: Variable 'v11' is used before being assigned.
unionTypePropertyAccessibility.ts(43,5): error TS2339: Property 'member' does not exist on type 'Default | Public | Protected'.
unionTypePropertyAccessibility.ts(44,1): error TS2454: Variable 'v12' is used before being assigned.
unionTypePropertyAccessibility.ts(44,5): error TS2339: Property 'member' does not exist on type 'Default | Public | Private'.
unionTypePropertyAccessibility.ts(45,1): error TS2454: Variable 'v13' is used before being assigned.
unionTypePropertyAccessibility.ts(45,5): error TS2339: Property 'member' does not exist on type 'Default | Protected | Private'.
unionTypePropertyAccessibility.ts(46,1): error TS2454: Variable 'v14' is used before being assigned.
unionTypePropertyAccessibility.ts(46,5): error TS2339: Property 'member' does not exist on type 'Public | Protected | Private'.
unionTypePropertyAccessibility.ts(47,1): error TS2454: Variable 'v15' is used before being assigned.
unionTypePropertyAccessibility.ts(47,5): error TS2339: Property 'member' does not exist on type 'Default | Public | Protected | Private'.


==== unionTypePropertyAccessibility.ts (27 errors) ====
    class Default {
        member: string;
    }
    
    class Public {
        public member: string;
    }
    
    class Protected {
        protected member: string;
    }
    
    class Private {
        private member: number;
    }
    
    var v1: Default;
    var v2: Public;
    var v3: Protected;
    var v4: Private;
    var v5: Default | Public;
    var v6: Default | Protected;
    var v7: Default | Private;
    var v8: Public | Protected;
    var v9: Public | Private;
    var v10: Protected | Private;
    var v11: Default | Public | Protected;
    var v12: Default | Public | Private;
    var v13: Default | Protected | Private;
    var v14: Public | Private | Protected;
    var v15: Default | Public | Private | Protected;
    
    v1.member;
    ~~
!!! error TS2454: Variable 'v1' is used before being assigned.
    v2.member;
    ~~
!!! error TS2454: Variable 'v2' is used before being assigned.
    v3.member;
    ~~
!!! error TS2454: Variable 'v3' is used before being assigned.
       ~~~~~~
!!! error TS2445: Property 'member' is protected and only accessible within class 'Protected' and its subclasses.
    v4.member;
    ~~
!!! error TS2454: Variable 'v4' is used before being assigned.
       ~~~~~~
!!! error TS2341: Property 'member' is private and only accessible within class 'Private'.
    v5.member;
    ~~
!!! error TS2454: Variable 'v5' is used before being assigned.
    v6.member;
    ~~
!!! error TS2454: Variable 'v6' is used before being assigned.
       ~~~~~~
!!! error TS2339: Property 'member' does not exist on type 'Default | Protected'.
    v7.member;
    ~~
!!! error TS2454: Variable 'v7' is used before being assigned.
       ~~~~~~
!!! error TS2339: Property 'member' does not exist on type 'Default | Private'.
    v8.member;
    ~~
!!! error TS2454: Variable 'v8' is used before being assigned.
       ~~~~~~
!!! error TS2339: Property 'member' does not exist on type 'Public | Protected'.
    v9.member;
    ~~
!!! error TS2454: Variable 'v9' is used before being assigned.
       ~~~~~~
!!! error TS2339: Property 'member' does not exist on type 'Public | Private'.
    v10.member;
    ~~~
!!! error TS2454: Variable 'v10' is used before being assigned.
        ~~~~~~
!!! error TS2339: Property 'member' does not exist on type 'Protected | Private'.
    v11.member;
    ~~~
!!! error TS2454: Variable 'v11' is used before being assigned.
        ~~~~~~
!!! error TS2339: Property 'member' does not exist on type 'Default | Public | Protected'.
    v12.member;
    ~~~
!!! error TS2454: Variable 'v12' is used before being assigned.
        ~~~~~~
!!! error TS2339: Property 'member' does not exist on type 'Default | Public | Private'.
    v13.member;
    ~~~
!!! error TS2454: Variable 'v13' is used before being assigned.
        ~~~~~~
!!! error TS2339: Property 'member' does not exist on type 'Default | Protected | Private'.
    v14.member;
    ~~~
!!! error TS2454: Variable 'v14' is used before being assigned.
        ~~~~~~
!!! error TS2339: Property 'member' does not exist on type 'Public | Protected | Private'.
    v15.member;
    ~~~
!!! error TS2454: Variable 'v15' is used before being assigned.
        ~~~~~~
!!! error TS2339: Property 'member' does not exist on type 'Default | Public | Protected | Private'.
    